    * Added transactionId into Nuvei Transactions meta field.
    * Hide "SimplyConnect theme" setting, when Cashier was set as payment option.
    * When DMN can not find the Order, return 400 only for the parent transactions as Auth and Sale.
    * Changed the order of few hooks.
    * When place Nuvei buttons in the admin, do it only for WC_Order objects.

# 1.4.7
    * Fix for the logic who decide will we create update or open order request.
    * Fix for the loadings styles method.
    * Do not use the authCode as Int.

# 1.4.6
    * Added few more fields into _nuveiTransactions meta field.
    * Added and removed few comments.
    * Changed the place where call the new save_transaction_data method.

# 1.4.5
    * Moved Auto-Void logic after the last try to find the Order in WC.
    * Lowered the maximum tries count when search for existing WC Order.
    * Added _nuveiTransactions private Order meta field to save main data for each transaction.

# 1.4.4
    * Added new checkout icon for the plugin.
    * Load front-end scripts and styles in separate methods.
    * Always pass userTokenId into the openOrder request. The decision for saving UPO is into the SDK.
    * Changed the logic when to call updateOrder.
    * Fix for the unexpected refresh of the Checkout SDK when try to pay.

# 1.4.3
    * Added option to save UPOs for Guest users, when the user try to buy a product with Subscription.
    * Added Auto-Void functionality in case of payment, but did not created Order in WC.

# 1.4.2
    * Added support for theme picking for SimplyConnect.
    * Added option to save logs into second log file - nuvei.log.
    * Added id attribute to the "Block Payment methods" setting "Clean" button.
    * Removed the "SDK Version" option into the plugin.
    * Fixed the problem with Chrome and plugin "Block Payment methods" dropdown.
    * Replaced safecharge domain into the endpoints with nuvei one, where is possible.
    * Split the requests response log.

# 1.4.1