@@ -9,6 +9,8 @@
     * When DMN can not find the Order, return 400 only for the parent transactions as Auth and Sale.
     * Changed the order of few hooks.
     * When place Nuvei buttons in the admin, do it only for WC_Order objects.
+    * Fixed the wrong Failed status of the Order when DCC was used.
+    * Fixed the check for new plugin version in Git.
 
 # 1.4.7
     * Fix for the logic who decide will we create update or open order request.
